--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                         </li>
                         <li>
                             <img src="img/contact.png" width="80" alt="tel">
-                            <p>il est en-dessous</p>
+                            <p>il est en dessous</p>
                         </li>
                     </ul>
                 </div>
