--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
             <div class="wall_img">
                 <img src="img/sable.jpg">
-                <a href="img/CV_Lucile_Lebeau.pdf" download>
+                <a href="img/CV_Lucile_Lebeau.pdf" download="CV_Lucile_Lebeau.pdf" target="_blank">
                     <button type="submit"><i class="fa fa-download"></i>  Distributeur de CV</button>
                 </a>
             </div>
@@ -199,32 +199,66 @@
                       <p class="card-text">Création d'un server IRC tel que Discord, projet réalisé à 2<br><br>Node.js - React - Socket.io - Express.js</p>
                       <a href="https://github.com/Lucilelebeau/My_IRC" class="btn btn-primary" target="_blank">voir +</a>
                     </div>
-                  </div>
-                  <div class="card">
-                    <img class="card-img-top" src="img/puissance4.png" alt="Puissance 4">
+                </div>
+                <div class="card">
+                  <img class="card-img-top" src="img/puissance4.png" alt="Puissance 4">
                     <div class="card-body">
                       <h5 class="card-title">Puissance 4</h5>
                       <p class="card-text">Jeu sous forme de Plugin en POO<br>Choix du nombre de case, couleur et nom<br><br>Javascript</p>
                       <a href="https://github.com/Lucilelebeau/Puissance4" class="btn btn-primary" target="_blank">voir +</a>
                     </div>
-                  </div>
-                  <div class="card">
+                </div>
+                <div class="card">
                     <img class="card-img-top" src="img/halloween.png" alt="Wordpress halloween">
                     <div class="card-body">
                       <h5 class="card-title">Hallowen party - Wordpress</h5>
-                      <p class="card-text">Création d'un thème, plugin et widgets<br><br>HTML / CSS / Javascript / MySQL / phpMyAdmin / MariaDB</p>
+                      <p class="card-text">Création d'un thème, plugin et widgets<br><br><br>HTML / CSS / Javascript / PHP</p>
                       <a href="https://github.com/Lucilelebeau/wordpress" class="btn btn-primary" target="_blank">voir +</a>
                     </div>
-                  </div>
-                  <div class="card">
+                </div>
+                <div class="card">
                     <img class="card-img-top" src="img/my_snap.jpg" alt="My snapchat">
                     <div class="card-body">
                       <h5 class="card-title">My snapchat</h5>
                       <p class="card-text">Application avec les fonctionnalités de snapchat, projet réalisé à 2<br><br>React-native<br></p>
                       <a href="https://github.com/Lucilelebeau/My_snapchat" class="btn btn-primary" target="_blank">voir +</a>
                     </div>
-                  </div>
+                </div>
+            
+                <div class="card">
+                    <img class="card-img-top" src="img/free_ads.png" alt="Free_ads">
+                    <div class="card-body">
+                      <h5 class="card-title"> My free_ads</h5>
+                      <p class="card-text">Site de petites annonces pour découvrir le framework Laravel<br><br>Laravel - MySQL</p>
+                      <a href="https://github.com/Lucilelebeau/My_freeAds" class="btn btn-primary" target="_blank">voir +</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="img/my_quizz.png" alt="quizz">
+                    <div class="card-body">
+                      <h5 class="card-title">My quizz</h5>
+                      <p class="card-text">Site de quizz pour découvrir le framework Symfony, avec un espace membre et admin<br><br>Symfony - MySQL</p>
+                      <a href="https://github.com/Lucilelebeau/my_quizz" class="btn btn-primary" target="_blank">voir +</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="img/my_tweeter2.png" alt="tweeter">
+                    <div class="card-body">
+                      <h5 class="card-title">My tweeter</h5>
+                      <p class="card-text">Reproduire les fonctionnalités de tweeter<br>et créer la bdd<br><br>HTML / CSS / Boostrap</p>
+                      <a href="https://github.com/Lucilelebeau/My_tweet" class="btn btn-primary" target="_blank">voir +</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="img/my_cinema.png" alt="My cinema">
+                    <div class="card-body">
+                      <h5 class="card-title">My cinema</h5>
+                      <p class="card-text">1er projet pour découvrir et interagir avec une bdd<br><br>HTML / CSS / PHP / MySQL / phpMyAdmin<br></p>
+                      <a href="https://github.com/Lucilelebeau/My_cinema" class="btn btn-primary" target="_blank">voir +</a>
+                    </div>
+                </div>
             </div>
+
             <div class="citation_div">
                 <img src="img/blockquote.png" height="40px" alt="blockquote">
                 <h3><i>Si vous n'essayez jamais vous ne réussirez jamais<br>mais si vous essayez vous risquez de vous étonner vous-même.</i></h3>
