--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="utf-8">
     <title>Lucile Lebeau Portfolio</title>
-    <link rel="icon" type="image/png" href="/img/logoLucileNav.png" />
+    <link rel="icon" type="image/png" href="./img/logoLucileNav.png" />
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
@@ -114,10 +114,6 @@
                         <img src="img/stopwatch.png"  width="80" alt="ponctuelle">
                         <p>ponctuelle</p>
                     </li>
-                    <li>
-                        <img src="img/interview.png" width="80" alt="tête en l'air">
-                        <p>un peu tête en l'air</p>
-                    </li>
                 </ul>
             </div>
         </section>
@@ -173,13 +169,19 @@
                     <li><img src="img/php.png" width="100" alt="php"></li>
                 </ul>
                 <ul class="skill_2">
-                    <li><img src="img/mysql.png" width="100" alt="mysql"></li>
-                    <li><img src="img/react.png" width="100" alt="react"></li>
-                    <li><img src="img/node.png"  width="100" alt="node.js"></li>
-                    <li><img src="img/laravel.png" width="100" alt="laravel"></li>
-                    <li><img src="img/symfony.png" width="100" alt="symfony"></li>
+                    <li><p><b>MySQL</b></p><img src="img/mysql.png" width="100" alt="mysql"></li>
+                    <li><p><b>MongoDB</b></p><img src="img/mongo.png" width="100" alt="mongo"></li>
+                    <li><p><b>React</b></p><img src="img/react.png" width="100" alt="react"></li>
+                    <li><p><b>Node</b></p><img src="img/node.png"  width="100" alt="node.js"></li>
+                    <li><p><b>Laravel</b></p><img src="img/laravel.png" width="100" alt="laravel"></li>
+                    <li><p><b>Symfony</b></p><img src="img/symfony.png" width="100" alt="symfony"></li>
                 </ul>
-            </div>
+                <ul class="skill_3">
+                    <li><p><b>Wordpress</b></p><img src="img/wordpress.png" width="100" alt="wordpress"></li>
+                    <li><p><b>Photoshop</b></p><img src="img/photoshop.png" width="100" alt="photoshop"></li>
+                    <li><p><b>Office</b></p><img src="img/office.png" width="100" alt="office"></li>
+                </ul>
+                </div>
 
             <div class="wall_img">
                 <img src="img/sable.jpg">
